# sys_user_mgmt_svc

./: Makefile  README.md  alembic.ini  project_charter.md  project_design.md  project_plan.md  pyproject.toml  tasks.md
src/sys_user_mgmt_svc/: app.py  config.py  database.py  main.py  models.py
src/sys_user_mgmt_svc/migrations/: env.py
src/sys_user_mgmt_svc/migrations/versions/: 000001_initial_setup.py
tests/: test_database.py  test_database_integration.py  test_models.py
